syntax = "proto3";

package mughieams.evermosassessment.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "protobuf/api/common.proto";

option go_package = "github.com/mughieams/evermos-assessment/protobuf/api;commerce_api";

service WarehouseService {
  rpc ActivateWarehouse(WarehouseIDRequest) returns (MessageResponse) {
    option (google.api.http) = {put: "/v1/warehouses/{warehouse_id}/activate"};
  }

  rpc DeactivateWarehouse(WarehouseIDRequest) returns (MessageResponse) {
    option (google.api.http) = {put: "/v1/warehouses/{warehouse_id}/deactivate"};
  }

  rpc TransferProduct(TransferProductRequest) returns (MessageResponse) {
    option (google.api.http) = {
      post: "/v1/warehouses/transfer"
      body: "*"
    };
  }

  rpc UpdateProductStock(UpdateProductStockRequest) returns (MessageResponse) {
    option (google.api.http) = {
      put: "/v1/warehouses/{warehouse_id}/products/{product_id}"
      body: "*"
    };
  }
}

message WarehouseIDRequest {
  int64 warehouse_id = 1;
}

message TransferProductRequest {
  int64 product_id = 1;
  int32 quantity = 2;
  int64 from_warehouse_id = 3;
  int64 to_warehouse_id = 4;
}

message UpdateProductStockRequest {
  int64 warehouse_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}
